# Forge-v2-Monorepo

./: .gitignore  package.json  tsconfig.base.json
FORGE_DOCS/: FORGE_CLOUDFLARE_AI_NATIVE_BLUEPRINT.md  FORGE_DATA_GRAPH_SPEC.md  FORGE_DATA_LAYER_SPEC.md  FORGE_HANDOFF_FOR_PROGRAMMER.md  FORGE_LAB_MODE_POLICY.md  FORGE_OBSIDIAN_MASTER_UPDATE_2026-03-05.md  FORGE_PLUGIN_PLATFORM_ARCHITECTURE.md  FORGE_TEMPLATE_YAML_FORMAT_SPEC.md  FORGE_X_AIHUB_INTEGRATION_BLUEPRINT_2026-03-05.md  FORGE_upgrade_log.md  NOTES_FORGE_AI_BAR_SCROLL_STACK.md
FORGE_DOCS/forge_app/: LAUNCH_README.md  package-lock.json
FORGE_DOCS/forge_app/src-tauri/: Cargo.toml
FORGE_DOCS/forge_app/src-tauri/src/: lib.rs
FORGE_DOCS/scripts/: stage_dashboard_payload.ps1
FORGE_SEMANTIC/: BIBLE_SEMANTIC_EXPLORER_AI_HANDOFF.md  CO_PARTNER_QUESTION_SYSTEM.md  GPT_CONVERSATION_EXTRACT_IMPLEMENTATION.md
FORGE_SEMANTIC/forge-hybrid-template/: UNIVERSAL_NODE_TEMPLATE.md
FORGE_SEMANTIC/schema-templates/: OPENAI_SCHEMA_TEMPLATE_BLANK.json
FORGE_SEMANTIC/semantic-workspace-excel-layer/: build_excel_template.py
_archive/ai_forge_code/: HANDOFF_README.txt  ai.ts
_archive/forge_review_legacy/: AGENTS.md  InlineAiBubble.tsx  README.md  aiPrompts_addition.ts
_archive/forge_review_legacy/EXAMPLE_TEMPLATES/: Invoice_letter.docx  OPENINTEL_EVIDENCE_TEMPLATE.xlsx
_archive/forge_review_legacy/FORGE_DOCS/: FORGE_AI_WELCOME_SIGN_TEMPLATE.md  FORGE_GRID_RESOLUTION_SPEC.md  FORGE_HEADER_DRAWER_AND_GUTTER_SPEC.md  FORGE_LAYER3_RULE_SUBSTRATE_SPEC.md  (+5 more)
_archive/forge_tts_server/: tts_server.py
(+96 files in other folders)
